# Nexus

./: .env.example  .gitignore  .replit  README.md  pyproject.toml  replit.md  requirements.txt  run_demo.py
attached_assets/: Pasted-Build-a-single-page-hero-section-with-a-full-screen-loo_1784823309293.txt
nexus/: TalentManager  __init__.py  __main__.py  nexus.py
nexus/.nexus-plugin/: marketplace.json  plugin.json
nexus/Talent/: candidate.py  interview.py  job_posting.py  matching.py  resume.py  search.py
nexus/agents/: AnalyticsAgent  AnalyticsAgent.py  BuilderAgent.py  CommunicationsAgent  DataAgent.py  HiringAgent  LegalAgent.py  MarketingAgent  NegotiationAgent  ProcurementAgent.py  QAAgent  RetrospectiveAgent.py  SchedulingAgent  SecurityAgent.py  SimulationAgent  TeamAgent  __init__.py  base.py  executive_agent.py  finance_agent.py  planning_agent.py  research_agent.py  risk_agent.py
nexus/core/: __init__.py  agent_registry.py  base_agent.py  event_bus.py  execution_engine.py  planner.py  registry.py  runtime.py  scheduler.py  task_queue.py  workflow_engine.py  world_model.py
nexus/events/: budget_events.py  communication_events.py  milestone_events.py  project_events.py  risk_events.py  task_events.py
nexus/governance/: __init__.py  approvals.py  audit.py  manager.py  permissions.py  policy.py
nexus/memory/: __init__.py  embedding.py  episodic_memory.py  manager.py  retrieval.py  semantic_memory.py  vector_store.py
nexus/server/: __main__.py  app.py
nexus/skills/: __init__.py
tests/: __init__.py  test_agents.py  test_world_model.py
(+114 files in other folders)
