[project]
name = "nexus-agents"
version = "0.1.0"
description = "Nexus — pluggable AI agents for an execution operating system"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["nexus*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
